--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Shakespeare, William, 1564-1616 -- Biography'
 - !lcsh 'Shakespeare, William, 1564-1616 -- Bibliography'
+- GITenberg
 title: 'A Life of William Shakespeare
 
   with portraits and facsimiles'
